<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".HomeActivity">

    <ImageView
        android:layout_width="492dp"
        android:layout_height="313dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/logo22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_panel"
        android:layout_width="396dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="316dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="38sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/see_routes"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="37dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="37dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/routes"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_panel" />

    <Button
        android:id="@+id/order_taxi"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="39dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/order_taxi"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintBottom_toTopOf="@+id/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/exit"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="696dp"
        android:layout_marginEnd="4dp"
        android:background="@color/black"
        android:contentDescription="@string/exit"
        android:src="@drawable/app_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>