<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".OrderSelectActivity">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="115dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/logo22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mess_route"
        android:layout_width="391dp"
        android:layout_height="143dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:text="@string/message_select"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:fontFamily="@font/myfont2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/order_by_number"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="110dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/number_text"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintBottom_toTopOf="@+id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/order_by_qrcode"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="37dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="37dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/qr_text"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mess_route" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="696dp"
        android:layout_marginEnd="4dp"
        android:background="@color/black"
        android:contentDescription="@string/back"
        android:src="@drawable/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>