<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".OrderRouteTaxiActivity">

    <ImageView
        android:layout_width="88dp"
        android:layout_height="98dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/route_ic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="402dp"
        android:layout_height="5dp"
        android:layout_marginTop="116dp"
        android:background="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mess_route"
        android:layout_width="296dp"
        android:layout_height="102dp"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:text="@string/create_order"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:fontFamily="@font/myfont2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sel_route"
        android:layout_width="389dp"
        android:layout_height="82dp"
        android:layout_gravity="center"
        android:layout_marginTop="180dp"
        android:text="@string/select_route"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:fontFamily="@font/myfont2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/route"
        android:layout_width="332dp"
        android:layout_height="51dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="36dp"
        android:background="@color/white"
        android:contentDescription="Start"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sel_route" />

    <Button
        android:id="@+id/make_trip"
        android:layout_width="332dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="65dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/make_order"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintBottom_toTopOf="@+id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="696dp"
        android:layout_marginEnd="4dp"
        android:background="@color/black"
        android:contentDescription="@string/back"
        android:src="@drawable/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>