<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".RoutesStopsActivity">

    <TextView
        android:id="@+id/mess_route"
        android:layout_width="396dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:text="@string/list_routes"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:fontFamily="@font/myfont2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="402dp"
        android:layout_height="5dp"
        android:layout_marginTop="96dp"
        android:background="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/route_list"
        android:layout_width="364dp"
        android:layout_height="435dp"
        android:layout_marginBottom="13dp"
        android:background="@color/white"
        android:choiceMode="singleChoice"
        android:divider="@color/yellow"
        android:dividerHeight="2dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintBottom_toTopOf="@+id/mess_stop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mess_route"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/mess_stop"
        android:layout_width="394dp"
        android:layout_height="123dp"
        android:layout_gravity="center"
        android:layout_marginTop="572dp"
        android:text="@string/message_stops"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:fontFamily="@font/myfont2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="696dp"
        android:layout_marginEnd="4dp"
        android:background="@color/black"
        android:contentDescription="@string/back"
        android:src="@drawable/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>